--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,17 @@
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
-        "nuwave/lighthouse": "^4.15"
+        "nuwave/lighthouse": "^4.15",
+        "owchzzz/laravel-syndicate": "@dev"
+    },
+    "repositories": {
+        "owchzzz/laravel-syndicate": {
+            "type": "path",
+            "url": "../packages/laravel-syndicate",
+            "options": {
+                "symlink": true
+            }
+        }
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -35,6 +45,7 @@
             "dont-discover": []
         }
     },
+    
     "autoload": {
         "psr-4": {
             "App\\": "app/"
